# aoc2019

./: Cargo.toml
data/: ex22_test.txt  ex6.txt
src/: ex1.rs  ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex15.rs  ex16.rs  ex17.rs  ex18.rs  ex19.rs  ex2.rs  ex20.rs  ex21.rs  ex22.rs  ex23.rs  ex24.rs  ex3.rs  ex4.rs  ex5.rs  ex6.rs  ex7.rs  ex7b.rs  ex8.rs  ex9.rs  read_lines.rs
