[package]
name = "aoc2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ex1"
path = "src/ex1.rs"

[[bin]]
name = "ex2"
path = "src/ex2.rs"

[[bin]]
name = "ex3"
path = "src/ex3.rs"

[[bin]]
name = "ex4"
path = "src/ex4.rs"

[[bin]]
name = "ex5"
path = "src/ex5.rs"

[[bin]]
name = "ex6"
path = "src/ex6.rs"
