[package]
name = "aoc2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ex1"
path = "src/ex1.rs"

[[bin]]
name = "ex2"
path = "src/ex2.rs"

[[bin]]
name = "ex3"
path = "src/ex3.rs"

[[bin]]
name = "ex4"
path = "src/ex4.rs"

[[bin]]
name = "ex5"
path = "src/ex5.rs"

[[bin]]
name = "ex6"
path = "src/ex6.rs"

[[bin]]
name = "ex7"
path = "src/ex7.rs"

[[bin]]
name = "ex7b"
path = "src/ex7b.rs"

[[bin]]
name = "ex8"
path = "src/ex8.rs"

[dependencies]
itertools = "0.10.5"
substring = "1.4.5"
